Make query on GUI, remove CLI query